# axai-pg

./: .env.test  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_PLAN.md  Dockerfile.dev  Dockerfile.test  Pipfile  README.md  TODO.md  add_sample_data.py  docker-compose.standalone-test.yml  docker-compose.yml  gdpr.sql  gdpr_handle.sql  hatch.toml  init-container-dev.sh  init-container-test.sh  init-dev.sh  perf_analysis.md  perf_test_scenarios.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  reset_db.sh  run_tests.sh  sample_data.sql  sample_data_part2.sql  sample_data_part3.sql  sample_data_part4.sql  sample_data_part5.sql  schema_readme.md  schema_verification.md  setup.py  setup.sh  test_queries.txt
.github/workflows/: ci.yml
archive/: CURRENT_PLAN.md  backup_recovery.md
archive/migration/: health_monitor.py  validation_tests.py
backup_scripts/: backup_validation.md  monitoring_procedure.md  operational_runbook.md  wal_archive_setup.md
docs/: integration_monitoring.md  integration_spec.md  integration_tests.md
docs/operations/: db_usage_guide.md
docs/schema/: README.md  data_integrity.md  operations.md  relationships_and_topics.md
examples/: integration_test_example.py  production_init_example.py
init-scripts/: 01-init-test-db.sh
migrations/: MIGRATION_GUIDE.md  README.md  sqitch.conf
migrations/deploy/: 20240115_0001_initialize_schema_tracking.sql  20240115_0002_migrate_existing_schema.sql
migrations/revert/: 20240115_0001_initialize_schema_tracking.sql  20240115_0002_migrate_existing_schema.sql
migrations/templates/: deploy.tmpl  revert.tmpl  verify.tmpl
migrations/verify/: 20240115_0001_initialize_schema_tracking.sql  20240115_0002_migrate_existing_schema.sql
sql/schema/: DEPRECATED.md  perf_test_summary.md  schema.sql
sql/security/: security.sql  security_schema.sql  security_views.sql
src/: __init__.py
src/axai_pg/: __init__.py
src/axai_pg/data/: DataAccessFactory.ts  PostgresConnectionManager.ts  README.md
src/axai_pg/data/__tests__/: PostgresConnectionManager.test.ts
src/axai_pg/data/config/: PostgresConfig.ts  database.py
src/axai_pg/data/interfaces/: IRepository.ts
src/axai_pg/data/migration/: migrate.py  migration_plan.md
src/axai_pg/data/migrations/: 001_security_tables.sql  002_security_functions.sql
src/axai_pg/models/: user.py
src/axai_pg/testing/: __init__.py  fixtures.py
src/axai_pg/utils/: __init__.py  db_initializer.py  schema_builder.py
src/data/: README.md  __init__.py
src/data/__tests__/: PostgresDocumentRepository.test.ts
src/data/config/: database.py  environments.py  settings.py
src/data/interfaces/: IDocumentRepository.ts
src/data/migration/: ASSESSMENT.md  README.md  migrator.py  validate_migration.py  validation_config.py
src/data/models/: __init__.py  graph.py  summary.py  topic.py  user.py
src/data/monitoring/: database_monitor.py  package.py
src/data/repositories/: README.md  base_repository.py  metrics_config.py  metrics_decorator.py  repository_interface.py  repository_metrics.py
src/data/security/: initialize_security.py  query_middleware.py  security_config.py
src/data/tests/: test_integration.py  test_settings.py
src/models/: user.py
src/tests/: __init__.py  test_repository_factory.py
tests/: COMPLETED_WORK.md  REMAINING_WORK.md  __init__.py  conftest.py  test_crud_operations.py  test_models.py
tests/docker_integration/: test_docker_database.py
tests/fixtures/: sample_data.py
tests/integration/: test_crud_operations.py  test_database.py  test_database_initializer.py  test_repository_factory.py  test_schema_builder.py  test_schema_creation.py
tests/unit/: test_base_repository.py  test_database_connection.py  test_database_monitoring.py  test_document_repository.py
(+35 files in other folders)
