[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axai-pg"
version = "0.1.0"
description = "PostgreSQL models and database management for AXAI applications"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "AXAI" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "psutil>=5.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/axai_pg"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
testing = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.0.0",
]
lint = [
    "black>=22.0.0",
    "flake8>=5.0.0",
]
types = [
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

# Hatch environments
[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.envs.default.scripts]
test = "PYTEST_DISABLE_PLUGIN_AUTOLOAD=1 pytest tests/integration/ -v --integration --cov=src --cov-report=term-missing --cov-report=xml"
test-all = "pytest tests/ -v --cov=src --cov-report=term-missing --cov-report=xml"

[tool.hatch.envs.lint]
dependencies = [
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[tool.hatch.envs.lint.scripts]
check = [
    "black --check src/ tests/",
    "flake8 src/ tests/",
]
fmt = "black src/ tests/"

[tool.hatch.envs.types]
dependencies = [
    "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy src/" 